@@ -388,6 +388,10 @@ MAP_STYLES = {
 LAYER_PRECISION_LAND = 4   # Number of fraction digit
 LAYER_SIMPLIFY_LAND = 10  # Simplification tolerance
 
+LAND_BBOX_CITIES_ENABLED = True
+LAND_BBOX_DISTRICTS_ENABLED = True
+LAND_BBOX_AREAS_ENABLED = False
+
 TREK_DAY_DURATION = 10  # Max duration to be done in one day
 
 # Static offsets in projection units
